--- a/styles/box-model.css
+++ b/styles/box-model.css
@@ -1,7 +1,7 @@
 .callout {
     max-width: 400px;
     margin: 10px;
-    border: 1px; solid rgb(0 0 0 / 0.1);
+    border: 1px solid rgb(0 0 0 / 0.1);
     padding: 15px;
     background-color: aqua;
     color: #fff;
