--- a/styles/box-model.css
+++ b/styles/box-model.css
@@ -1,6 +1,6 @@
 .callout {
     max-width: 400px;
-    margin: 10px;
+    margin: 10px 20px;
     border: 1px solid rgb(0 0 0 / 0.1);
     padding: 15px;
     background-color: aqua;
