--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,3 +24,24 @@ img {
 p {
     padding: 10px;
 }
+
+aside{
+    width: 20em;
+    margin: 1em;
+    border: 1px solid rgba(red, green, blue, alpha);
+    padding: 1em;
+    background-color: aliceblue;
+    color: darkslategrey;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 1em;
+    border-top: 1px solid #000;
+    text-align: center;
+}
