--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,3 +45,17 @@ footer {
     border-top: 1px solid #000;
     text-align: center;
 }
+
+
+.lato-light {
+    font-family: "Lato", serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .lato-regular {
+    font-family: "Lato", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
