--- a/wwr/images/styles.css/rafting.css
+++ b/wwr/images/styles.css/rafting.css
@@ -5,18 +5,20 @@
     --accent2-color:#625F81;
     --heading-font:Lato-regular 400 ,serif;
     --paragraph-font:Lato-Light 300 ,serif;
-    --nav-background-color:#8fbb00;
-    --nav-link-color:#F3D9B1;;
-    --nav-hover-link-color:#c07841;
-    --nav-hover-background-color:#a9bd6a;
+   
 }
 body{
-    font-family:var(--paragraph-font) ;
-    max-width: 960px;
-    padding: 20px;
-}
-h1,h2,h3,h4,h5,h6{
-font-family: var(--heading-font);
+    .lato-light {
+        font-family: "Lato", serif;
+        font-weight: 300;
+        font-style: normal;
+      }
+      
+      .lato-regular {
+        font-family: "Lato", serif;
+        font-weight: 400;
+        font-style: normal;
+      }
 color: var(--primary-color);
 }
 header{
