--- a/styles/rafting.css
+++ b/styles/rafting.css
@@ -106,7 +106,7 @@ textarea {
 
 footer {
     background-color: var(--primary-color-color);
-    color: white;
+    color: #4A188C;
     text-align: center;
     padding: 1rem;
     width: 100%;
