--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ img {
     box-shadow: 0 0 30px gray;  
 }
 
-main img { /* Or img { if it's the only image you want to center */
+main img { 
     display: block;
     margin: 0 auto;
 }
